# MeowerBot.py

./: .bandit  .breakpoints  .deepsource.toml  .editorconfig  .env.example  .gitignore  LICENSE  README.md  SECURITY.md  bandit.yaml  build.py  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  python-package.yml  python-publish.yml  symver.yml
MeowerBot/: API.py  Bot.py  _Commands.py  __init__.py  _cache.py  _version.py  bot.py  client.py  cog.py  cogs.py  command.py  commands.py  context.py  context.py.save  events.py
MeowerBot/Cloudlink/: cloudlink.py
MeowerBot/api/: __init__.py  admin.py  chats.py  shared.py  user.py
MeowerBot/cl/: __init__.py  cloudlink.py  waitedPacked.py
MeowerBot/data/: __init__.py  generic.py
MeowerBot/data/api/: __init__.py  chats.py  reports.py  user.py
MeowerBot/ext/: discord.py  help.py
MeowerBot/types/api/: __init__.py  reports.py  user.py
cloudlink/: client-example-async.py  client-example-not-async.py  server-example.py
docs/: CNAME  Makefile  Post.md  _config.yml.  build.sh  callbacks.md  conf.py  ctx.md  index.md
docs/autogen/: MeowerBot.cl.rst  modules.rst
docs/callbacks/: login.md  on_close.md  on_login.md  on_pmsg.md  on_pvar.md  on_raw_msg.md  on_statuscode.md  on_ulist_change.md
docs/refrence/: commands.md  index.md
docs/source/: Callbacks.rst  Cogs.rst  CreatingYourFirstBot.rst  GettingStarted.rst  MeowerBot.Bot.rst  MeowerBot.api.chats.rst  MeowerBot.api.rst  MeowerBot.api.shared.rst  MeowerBot.cog.rst  MeowerBot.command.rst  MeowerBot.context.rst  MeowerBot.rst  conf.py  extras.rst  index.rst  requirements.txt
docs/tutorial/: callbacks.md  cogs.md  index.md  setting_up.md
src/: .dccache  API.py  Bot.py  Errors.py  __init__.py  _internal.py  bot.py  client.py  types.py
src/MeowerBot/: __init__.py  client.py  errors.py  types.py
src/cloudlink/: cloudlink.py  supporter.py
src/raw/: _internal.py  bot.py
tests/: API.py  cog.py  cogs.py  command.py  integration_login.py  login.py  msg_post.py  test_api.py  test_bot.py  test_cog.py  test_command.py  type_forever.py
tests/intergration/: .env.example  API.py  cogs.py  command.py  integration_login.py  join_chat.py  login.py  test_help.py  type_forever.py
(+53 files in other folders)
